--- a/src/components/CartModal.css
+++ b/src/components/CartModal.css
@@ -1,4 +1,4 @@
-/* CartModal.css */
+
 .cart-modal-overlay {
   position: fixed;
   top: 0;
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  backdrop-filter: blur(5px); /* تأثير ضبابي */
+  backdrop-filter: blur(5px); 
 }
 
 .cart-modal {
